--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.21.1",
     "core-js": "~3.6.5",
     "date-fns": "^2.21.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.13.8",
