--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "cross-env NODE_OPTIONS='--max-old-space-size=8192' node scripts/start.js",
     "build": "cross-env NODE_OPTIONS='--max-old-space-size=8192' node scripts/build.js",
     "test": "cross-env NODE_OPTIONS='--max-old-space-size=8192' node scripts/test.js --env=jsdom",
+    "serve": "serve \"./build\" -s",
     "postinstall": "postinstall"
   },
   "postinstall": {
@@ -90,6 +91,7 @@
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.0.5",
     "semver": "7.3.2",
+    "serve": "^11.3.2",
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
