--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ REACT_APP_SELECTION_ITEM = 'http://mail.vej.dk/sn/icokal.nsf/JSONselectionList?O
 REACT_APP_SELECTION_ITEM_DETAILS = 'http://mail.vej.dk/sn/icokal.nsf/JSONselectionList?OpenAgent&Selection=item&Key='
 REACT_APP_CREATE_PROJECT = 'http://mail.vej.dk/sn/icokal.nsf/jsonimport?OpenAgent&ImportType=project'
 REACT_APP_UPDATE_SELECTION = 'http://mail.vej.dk/sn/icokal.nsf/jsonimport?OpenAgent&ImportType=selection'
+REACT_APP_UPDATE_PROJECT = 'http://mail.vej.dk/sn/icokal.nsf/jsonimport?OpenAgent&ImportType=project&Key='
