--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@bryntum/demo-resources": "1.0.1",
+    "@bryntum/scheduler": "npm:@bryntum/scheduler-trial@4.1.0",
+    "@bryntum/scheduler-react": "4.1.0",
     "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -65,6 +68,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "material-ui-image": "^3.3.2",
     "mini-css-extract-plugin": "0.11.3",
     "moment": "^2.29.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -82,6 +86,7 @@
     "react-query": "^3.13.8",
     "react-redux": "^7.2.3",
     "react-refresh": "^0.8.3",
+    "react-router-dom": "^5.2.0",
     "react-sortable-hoc": "^2.0.0",
     "redux": "^4.0.5",
     "resolve": "1.18.1",
@@ -92,7 +97,6 @@
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
-    "typescript": "^4.1.2",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
     "webpack": "4.44.2",
@@ -104,17 +108,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.13",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux-logger": "^3.0.8",
     "cross-env": "~7.0.2",
     "postinstall": "^0.4.2",
     "react-query-devtools": "^2.6.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "typescript": "^4.2.4"
   },
   "browserslist": {
     "production": [
