--- a/package.json
+++ b/package.json
@@ -79,11 +79,14 @@
     "prompts": "2.4.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
+    "react-cookie": "^4.0.3",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.1",
     "react-query": "^3.13.8",
     "react-redux": "^7.2.3",
     "react-refresh": "^0.8.3",
+    "react-resizable": "^3.0.2",
+    "react-resize-panel": "^0.3.5",
     "react-router-dom": "^5.2.0",
     "react-sortable-hoc": "^2.0.0",
     "redux": "^4.0.5",
