add titles in selected regions and fabriks, nonscheduled implemented

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ GENERATE_SOURCEMAP=false
 
 
 # Project environment variables
-
 REACT_APP_INIT_BRIK_URL = 'http://mail.vej.dk/sn/icokal.nsf/jsoninital?OpenAgent'
+REACT_APP_NON_SCHEDULED_BRIK_URL = 'http://mail.vej.dk/sn/icokal.nsf/jsoninital?OpenAgent&state=nonscheduled'
 REACT_APP_SELECTION_PROJECT = 'http://mail.vej.dk/sn/icokal.nsf/JSONselectionList?OpenAgent&Selection=project'
 REACT_APP_SELECTION_PROJECT_DETAILS = 'http://mail.vej.dk/sn/icokal.nsf/JSONselectionList?OpenAgent&Selection=project&Key='
 REACT_APP_GET_PROJECT_DETAILS = 'http://mail.vej.dk/sn/icokal.nsf/JSONselectionList?OpenAgent&Selection=projectDetail&Key='
@@ -16,3 +16,4 @@ REACT_APP_SELECTION_ITEM_DETAILS = 'http://mail.vej.dk/sn/icokal.nsf/JSONselecti
 REACT_APP_CREATE_PROJECT = 'http://mail.vej.dk/sn/icokal.nsf/jsonimport?OpenAgent&ImportType=project'
 REACT_APP_UPDATE_SELECTION = 'http://mail.vej.dk/sn/icokal.nsf/jsonimport?OpenAgent&ImportType=selection'
 REACT_APP_UPDATE_PROJECT = 'http://mail.vej.dk/sn/icokal.nsf/jsonimport?OpenAgent&ImportType=project&Key='
+
